--- a/templates/index.html
+++ b/templates/index.html
@@ -1,43 +1,44 @@
 {% extends 'layout.html' %}
 
-{% block gövde %}
-<table class="table">
-    <thead>
-      <tr>
-        <th scope="col">Coin</th>
-        <th scope="col">Zaman Dilimi</th>
-        <th scope="col">Direnç</th>
-        <th scope="col">Destek</th>
-        <th scope="col">Stop</th>
-        <th scope="col">EMA14</th>
-        <th scope="col">Şuan - Dirence göre değişim</th>
-        <th scope="col">Durum</th>
-        <th scope="col">Zaman</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for i in range(data|length) %}
-      <tr>
+  {% block gövde %}
+  <div class="my-3 px-4 text-center">
+  <table class=" table table-secondary table-hover">
+      <thead>
+        <tr>
+          <th scope="col">Coin</th>
+          <th scope="col">Zaman Dilimi</th>
+          <th scope="col">Direnç</th>
+          <th scope="col">Destek</th>
+          <th scope="col">Stop</th>
+          <th scope="col">EMA14</th>
+          <th scope="col">Şuan - Dirence göre değişim</th>
+          <th scope="col">Durum</th>
+          <th scope="col">Zaman</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for i in range(data|length) %}
+        <tr>
+          
+          <td>{{data[i][0]}}</td>
+          <td>{{data[i][1]}}</td>
+          <td>{{data[i][2]}}</td>
+          <td>{{data[i][3]}}</td>
+          <td>{{data[i][4]}}</td>
+          <td>{{data[i][5]}}</td>
+          {% if (data[i][6] >= data[i][2]) %}
+          <td style="color:rgb(19, 121, 58);"><b>{{data[i][6]}}  %({{(100*(data[i][6]-data[i][2])/data[i][2])|round(2)}})</b></td>
+          {% endif %}
+          {% if (data[i][2] > data[i][6]) %}
+          <td style="color: red;"><b>{{data[i][6]}}  %(-{{(100*(data[i][2]-data[i][6])/data[i][6])|round(2)}})</b></td>
+          {% endif %}
+          <td>{{data[i][7]}}</td>
+          <td>{{data[i][8]}}</td>
+        </tr>
+        {% endfor %}
         
-        <td>{{data[i][0]}}</td>
-        <td>{{data[i][1]}}</td>
-        <td>{{data[i][2]}}</td>
-        <td>{{data[i][3]}}</td>
-        <td>{{data[i][4]}}</td>
-        <td>{{data[i][5]}}</td>
-        {% if (data[i][6] >= data[i][2]) %}
-        <td style="color:rgb(19, 121, 58);"><b>{{data[i][6]}}  %({{(100*(data[i][6]-data[i][2])/data[i][2])|round(2)}})</b></td>
-        {% endif %}
-        {% if (data[i][2] > data[i][6]) %}
-        <td style="color: red;"><b>{{data[i][6]}}  %(-{{(100*(data[i][2]-data[i][6])/data[i][6])|round(2)}})</b></td>
-        {% endif %}
-        <td>{{data[i][7]}}</td>
-        <td>{{data[i][8]}}</td>
-      </tr>
-      {% endfor %}
       
-     
-    </tbody>
-  </table>
-
-{% endblock gövde %}
+      </tbody>
+    </table>
+</div>
+  {% endblock gövde %}
