--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,6 +34,9 @@ background: linear-gradient(to right, #536976, #BBD2C5); /* W3C, IE 10+/ Edge, F
           </li>
           <li class="nav-item">
             <a class="nav-link" href="datas">Datas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://t.me/loundre_analys" target="_blank">Telegram Bot</a>
           </li> 
           
         </ul>
