--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,7 +23,7 @@ background: linear-gradient(to right, #536976, #BBD2C5); /* W3C, IE 10+/ Edge, F
 <body>
   <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid ">
-      <a class="navbar-brand"> ≋ L️ ≋ &nbsp; Loundre Analysis</a>
+      <a class="navbar-brand" href="/"> ≋ L️ ≋ &nbsp; Loundre Analysis</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
