--- a/templates/datas.html
+++ b/templates/datas.html
@@ -1,11 +1,42 @@
 {% extends 'layout.html' %}
-
 {% block gövde %}
-    <pre>
+<div class="accordion accordion-flush" id="accordionFlushExample">
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="flush-headingOne">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+          db datas
+        </button>
+      </h2>
+      <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">
+            <pre>
         <code>
             {{text}}
         </code>
     </pre>
+    </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="flush-headingTwo">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+          web list data
+        </button>
+      </h2>
+      </h2>
+      <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+        <div class="accordion-body">
+            <pre>
+                <code>
+                    {{web}}
+                </code>
+            </pre>
+        </div>
+      </div>
+    </div>
+  </div>
+
+    
         
     
 {% endblock gövde %}
